# SpaceShift

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
client/: CMakeLists.txt  conanfile.txt
client/Resources/: testMap.txt
client/meta/: Info.plist
client/src/: Main.cpp  State.hpp  StateManager.cpp  StateManager.hpp
client/src/gui/: Button.cpp  Button.hpp
client/src/level/: Level.hpp  Map.cpp  Map.hpp  TileMapTextureProvider.cpp  TileMapTextureProvider.hpp
client/src/network/: NetworkClient.cpp  NetworkClient.hpp
client/src/resource/: GenericResourceProvider.hpp  GenericTextureProvider.cpp  GenericTextureProvider.hpp  Resource.hpp  ResourceIDProvider.cpp  ResourceIDProvider.hpp  ResourceLoaders.cpp  ResourceLoaders.hpp  ResourceProvider.hpp  StaticResourceProviders.cpp  StaticResourceProviders.hpp
client/src/state/: InGameState.cpp  InGameState.hpp  TestState.cpp  TestState.hpp  TitleScreenState.cpp  TitleScreenState.hpp
client/src/tilemap/: TileMap.cpp  TileMap.hpp  TileMapTextureProvider.cpp
client/src/utility/: FilePath.hpp  Tokeniser.hpp  Tokenizer.hpp
resources/: testMap.txt
server/: CMakeLists.txt  conanfile.txt
server/src/: Constants.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  Main.cpp  NetworkManager.cpp  NetworkManager.hpp  PacketHandler.hpp  PacketSender.hpp
server/src/game/: Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GamesManager.cpp  GamesManager.hpp
server/src/generator/: SquareGenerator.hpp
shared/: ClientPacketWrapper.hpp  Packet.hpp  ServerPacketWrapper.hpp
shared/packets/: ClientPacket.hpp  ClientPacketWrapper.hpp  HandshakeRequest.hpp  HandshakeResponse.hpp  PacketWrapper.hpp  ServerPacket.hpp  ServerPacketWrapper.hpp
shared/packets/client/: AuthenticationRequest.hpp  CheckAliveResponse.hpp  DisconnectNotify.hpp  LoginRequest.hpp  PlayerMoveRequest.hpp  (+3 more)
shared/player/: PlayerEntity.hpp
shared/utility/: Constants.hpp  DoubleMap.hpp  ExecutablePath.hpp  FilePath.cpp  FilePath.hpp  MatrixVector.hpp  Serializer.hpp  Tokenizer.hpp
src/: Tilemap.cpp  Tilemap.hpp
src/level/: Level.hpp  Map.cpp  Map.hpp
src/player/: Player.cpp  Player.hpp
src/resource/: GenericTextureProvider.cpp  GenericTextureProvider.hpp  TextureProvider.cpp  TextureProvider.hpp  TextureResourceIDProvider.cpp  TextureResourceIDProvider.hpp
src/state/: InGameState.cpp  InGameState.hpp  TestState.cpp  TestState.hpp
src/tilemap/: Tilemap.cpp  Tilemap.hpp  TilemapTextureProvider.cpp  TilemapTextureProvider.hpp
src/utility/: Filepath.cpp  Filepath.hpp  Tokeniser.hpp
(+6 files in other folders)
